--- a/chains/solana/contracts/programs/ccip-router/Cargo.toml
+++ b/chains/solana/contracts/programs/ccip-router/Cargo.toml
@@ -3,6 +3,7 @@ name = "ccip_router"
 version = "0.1.0-dev"
 description = "Created with Anchor"
 edition = "2021"
+build = "build.rs"
 
 [lib]
 crate-type = ["cdylib", "lib"]
@@ -27,3 +28,6 @@ ccip_common = {path = "../ccip-common"}
 
 [dev-dependencies]
 hex = "0.4.3"
+
+[build-dependencies]
+build_commit = { path = "../../crates/build-commit" }
