Set dummy git_hash value

--- a/chains/solana/contracts/Dockerfile
+++ b/chains/solana/contracts/Dockerfile
@@ -4,6 +4,7 @@ FROM backpackapp/build:${ANCHOR_CLI}
 
 COPY . /contracts
 
+ENV CCIP_BUILD_GIT_HASH=dummyvaluewhichis40characterslongexactly
 RUN cd /contracts && anchor build
 
 # only keep downloaded artifacts in /root/.cargo cached
