Add sender ownership scripts

--- a/chains/solana/contracts/tests/ccip/devnet.config.yaml.example
+++ b/chains/solana/contracts/tests/ccip/devnet.config.yaml.example
@@ -1,4 +1,4 @@
-offramp: offVkroQ4wYMv6QFPBvJazAx2p8BnLh7sJRdyQ5GYfx
+offramp: <PUT THE OFFRAMP ADDRESS HERE>
 test_receiver: <PUT YOUR TEST RECEIVER ADDRESS HERE>
 example_sender: <PUT YOUR EXAMPLE SENDER ADDRESS HERE>
 
