--- a/chains/solana/contracts/programs/execution-buffer/Cargo.toml
+++ b/chains/solana/contracts/programs/execution-buffer/Cargo.toml
@@ -17,9 +17,7 @@ default = []
 
 [dependencies]
 solana-program = "1.17.25" # pin solana to 1.17
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
-anchor-spl = "0.29.0"
+anchor-lang = { version = "0.29.0" }
 bytemuck = "1.7"
-ethnum = "1.5"
 ccip_common = {path = "../ccip-common"}
 ccip_offramp = {path = "../ccip-offramp", features = ["cpi"]}
