ZK Sync gobindings (#833)
* ZK Sync gobindings

* go mod tidy

* Bump chainlink-evm

Regenerated files

* Add line

* Copy template

* Legacy contract bindings

These are necessary for testing v1.6 changesets

* Fix on ramp v1.6

* Lint

* Generate

* Copy to v1.6

--- a/chains/evm/GNUmakefile
+++ b/chains/evm/GNUmakefile
@@ -12,6 +12,11 @@ snapshot-diff: ## Make a snapshot for a specific product.
 foundry: ## Install foundry.
 	foundryup --install v1.0.0
 
+# it may be necessary to install libusb on your machine as a dependency for this script to work
+.PHONY: foundry-zksync
+foundry-zksync: ## Install foundry.
+	./scripts/install_foundry_zksync
+
 ccip-precommit: export FOUNDRY_PROFILE=ccip
 .PHONY: ccip-precommit
 ccip-precommit:
@@ -32,6 +37,10 @@ ccip-lcov:
 wrappers: pnpmdep mockery abigen
 	./scripts/compile_all
 	go generate ./gobindings
+
+.PHONY: wrappers-zksync
+wrappers-zksync: pnpmdep foundry-zksync
+	ZKSYNC=true make wrappers
 
 .PHONY: pnpmdep
 pnpmdep: ## Install solidity contract dependencies through pnpm
