--- a/.github/workflows/solidity-build-and-publish.yml
+++ b/.github/workflows/solidity-build-and-publish.yml
@@ -95,6 +95,10 @@ jobs:
         working-directory: chains/evm
         run: make wrappers
 
+      - name: Install and run forge --zksync, and generate wrappers
+        working-directory: chains/evm
+        run: make wrappers-zksync
+
       - name: Check if Go solidity wrappers are updated
         if: ${{ needs.changes.outputs.changes == 'true' }}
         working-directory: chains/evm
