fix publish-prod cmd

--- a/chains/evm/package.json
+++ b/chains/evm/package.json
@@ -8,7 +8,7 @@
   "private": false,
   "scripts": {
     "publish-beta": "pnpm publish --tag beta",
-    "publish-prod": "npm dist-tag add @chainlink/contracts-ccip@1.6.0 latest",
+    "publish-prod": "pnpm publish --tag latest",
     "compile": "./scripts/compile_all",
     "solhint": "solhint --max-warnings 0 \"./contracts/**/*.sol\"",
     "solhint-test": "solhint --config \".solhint-test.json\"  --ignore-path \".solhintignore-test\" --max-warnings 0 \"./contracts/**/*.sol\""
