--- a/chains/solana/contracts/Anchor.toml
+++ b/chains/solana/contracts/Anchor.toml
@@ -1,9 +1,13 @@
+[workspace]
+members = ["programs/*"]
+
 [toolchain]
-anchor_version = "0.29.0"
+anchor_version = "0.31.0"
 
 [features]
 seeds = false
 skip-lint = false
+resolution = false
 
 [programs.localnet]
 access_controller = "6KsN58MTnRQ8FfPaXHiFPPFGDRioikj9CdPvPxZJdCjb"
