--- a/chains/solana/contracts/programs/access-controller/Cargo.toml
+++ b/chains/solana/contracts/programs/access-controller/Cargo.toml
@@ -12,10 +12,11 @@ name = "access_controller"
 no-entrypoint = []
 no-idl = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build"]
 default = []
 
 [dependencies]
-anchor-lang = "0.29.0"
+anchor-lang = "0.31.0"
 bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
 static_assertions = "1.1.0"
 arrayvec = { version = "1.0.0", path = "../../crates/arrayvec" }
