--- a/chains/solana/contracts/programs/base-token-pool/Cargo.toml
+++ b/chains/solana/contracts/programs/base-token-pool/Cargo.toml
@@ -13,11 +13,12 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
-anchor-spl = "0.29.0"
-solana-program = "1.17.25" # pin solana to 1.17
-spl-math = { version = "0.2.0", features = [ "no-entrypoint" ] }
+anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
+anchor-spl = "0.31.0"
+solana-program = "2.1.0"
+spl-math = { version = "0.3.0", features = [ "no-entrypoint" ] }
 rmn_remote = {path = "../rmn-remote", features = ["cpi"]}
