--- a/chains/solana/contracts/programs/ccip-common/Cargo.toml
+++ b/chains/solana/contracts/programs/ccip-common/Cargo.toml
@@ -12,12 +12,13 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 # ccip-common is not to be deployed, so using the no-entrypoint feature
 # prevents global allocator conflicts with its dependees.
 default = ["no-entrypoint"]
 
 [dependencies]
-solana-program = "1.17.25" # pin solana to 1.17
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
-anchor-spl = "0.29.0"
+solana-program = "2.1.0"
+anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
+anchor-spl = "0.31.0"
 ethnum = "1.5"
