--- a/chains/solana/contracts/programs/ccip-router/Cargo.toml
+++ b/chains/solana/contracts/programs/ccip-router/Cargo.toml
@@ -14,12 +14,13 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 default = []
 
 [dependencies]
-solana-program = "1.17.25" # pin solana to 1.17
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
-anchor-spl = "0.29.0"
+solana-program = "2.1.0"
+anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
+anchor-spl = "0.31.0"
 bytemuck = "1.7"
 ethnum = "1.5"
 fee_quoter = {path = "../fee-quoter", features = ["cpi"]}
