--- a/chains/solana/contracts/programs/external-program-cpi-stub/Cargo.toml
+++ b/chains/solana/contracts/programs/external-program-cpi-stub/Cargo.toml
@@ -13,7 +13,8 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build"]
 default = []
 
 [dependencies]
-anchor-lang = "0.29.0"
+anchor-lang = "0.31.0"
