--- a/chains/solana/contracts/programs/fee-quoter/Cargo.toml
+++ b/chains/solana/contracts/programs/fee-quoter/Cargo.toml
@@ -13,15 +13,16 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 default = []
 
 [dependencies]
-solana-program = "1.17.25" # pin solana to 1.17
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
-anchor-spl = "0.29.0"
+solana-program = "2.1.0"
+anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
+anchor-spl = "0.31.0"
 bytemuck = "1.7"
 ethnum = "1.5"
-ccip_common = {path = "../ccip-common"}
+ccip_common = { version = "0.1.0-dev", path = "../ccip-common/", features = ["no-entrypoint"] }
 
 [dev-dependencies]
 hex = "0.4.3"
