--- a/chains/solana/contracts/programs/mcm/Cargo.toml
+++ b/chains/solana/contracts/programs/mcm/Cargo.toml
@@ -13,10 +13,11 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build"]
 default = []
 
 [dependencies]
-anchor-lang = "0.29.0"
+anchor-lang = "0.31.0"
 
 [dev-dependencies]
 hex = "0.4.3"
