--- a/chains/solana/contracts/programs/ping-pong-demo/Cargo.toml
+++ b/chains/solana/contracts/programs/ping-pong-demo/Cargo.toml
@@ -13,12 +13,13 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 default = []
 
 [dependencies]
-solana-program = "1.17.25" # pin solana to 1.17
-anchor-lang = { version = "0.29.0", features = [] }
-anchor-spl = "0.29.0"
+solana-program = "2.1.0"
+anchor-lang = { version = "0.31.0", features = [] }
+anchor-spl = "0.31.0"
 example_ccip_receiver = { path = "../example-ccip-receiver", features = ["no-entrypoint"]}
 ccip_router = { path = "../ccip-router", features = ["cpi"] }
 
