--- a/chains/solana/contracts/programs/timelock/Cargo.toml
+++ b/chains/solana/contracts/programs/timelock/Cargo.toml
@@ -13,10 +13,11 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build"]
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
+anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
 access-controller = { version = "1.0.1", path = "../access-controller", default-features = false, features = ["cpi"] }
 bytemuck = "1.7"
 static_assertions = "1.1.0"
