(commit from remote subtree): Fix usdc pool compilation issues

--- a/chains/solana/contracts/programs/usdc-token-pool/Cargo.toml
+++ b/chains/solana/contracts/programs/usdc-token-pool/Cargo.toml
@@ -24,4 +24,4 @@ ccip_common = {path = "../ccip-common"}
 solana-program = "1.17.25"
 
 [build-dependencies]
-build-commit = { path = "../../crates/build-commit" }
+build_commit = { path = "../../crates/build-commit" }
