--- a/.github/workflows/ccip-integration-test.yml
+++ b/.github/workflows/ccip-integration-test.yml
@@ -7,7 +7,32 @@ on:
       - 'main'
 
 jobs:
+  changes:
+    name: Detect changes
+    runs-on: ubuntu-latest
+    outputs:
+      non_src_changes: ${{ steps.changes.outputs.non_src }}
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+      - name: Detect changes
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
+        id: changes
+        with:
+          list-files: "shell"
+          # Run on all, except the chains/evm folder unless it's in a released version.
+          filters: |
+            e2e_should_run:
+              - '**'
+              - '!chains/evm/**'
+              - 'chains/evm/gobindings/generated/**'
+              - '!chains/evm/gobindings/generated/latest'
+
   integration-test-matrix:
+    needs: [changes]
+    if: ${{ needs.changes.outputs.e2e_should_run == 'true' }}
     env:
       # We explicitly have this env var not be "CL_DATABASE_URL" to avoid having it be used by core related tests
       # when they should not be using it, while still allowing us to DRY up the setup
