--- a/.github/workflows/solana.yml
+++ b/.github/workflows/solana.yml
@@ -15,7 +15,29 @@ defaults:
     working-directory: ./chains/solana
 
 jobs:
+  changes:
+    name: Detect changes
+    runs-on: ubuntu-latest
+    outputs:
+      non_src_changes: ${{ steps.changes.outputs.non_src }}
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+      - name: Detect changes
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
+        id: changes
+        with:
+          list-files: "shell"
+          filters: |
+            solana_changes:
+              - 'chains/solana/**'
+              - '.github/workflows/solana*.yml'
+
   get_anchor_version:
+    needs: [ changes ]
+    if: ${{ needs.changes.outputs.solana_changes == 'true' }}
     name: Get Anchor Version
     runs-on: ubuntu-latest
     outputs:
@@ -30,9 +52,10 @@ jobs:
           echo "anchor=${anchor}" >>$GITHUB_OUTPUT
 
   build_solana:
+    needs: [changes, get_anchor_version]
+    if: ${{ needs.changes.outputs.solana_changes == 'true' }}
     name: cache build artifacts
     runs-on: ubuntu-latest-8cores-32GB
-    needs: [get_anchor_version]
     steps:
     - uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
     - name: cache docker build image
@@ -67,9 +90,10 @@ jobs:
           chmod -R 755 ./target"
 
   rust:
+    needs: [ changes, get_anchor_version, build_solana ]
+    if: ${{ needs.changes.outputs.solana_changes == 'true' }}
     name: rust tests
     runs-on: ubuntu-latest
-    needs: [get_anchor_version, build_solana]
     steps:
     - uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
     - name: Cache cargo target dir
@@ -101,9 +125,10 @@ jobs:
           cargo test --workspace"
 
   go:
+    needs: [ changes, get_anchor_version, build_solana ]
+    if: ${{ needs.changes.outputs.solana_changes == 'true' }}
     name: go tests
     runs-on: ubuntu-latest-8cores-32GB
-    needs: [get_anchor_version, build_solana]
     steps:
       - uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
       - name: Cache cargo target dir
@@ -147,9 +172,10 @@ jobs:
           make go-tests
 
   lint:
+    needs: [ changes, get_anchor_version, build_solana ]
+    if: ${{ needs.changes.outputs.solana_changes == 'true' }}
     name: lint + check artifacts
     runs-on: ubuntu-latest
-    needs: [get_anchor_version, build_solana]
     steps:
       - uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
       - name: Cache cargo target dir
