--- a/.github/workflows/solana-verified-build.yml
+++ b/.github/workflows/solana-verified-build.yml
@@ -16,7 +16,7 @@ jobs:
     name: Detect changes
     runs-on: ubuntu-latest
     outputs:
-      non_src_changes: ${{ steps.changes.outputs.non_src }}
+      solana_changes: ${{ steps.changes.outputs.solana_changes }}
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v4
