--- a/.github/workflows/solana-verified-build.yml
+++ b/.github/workflows/solana-verified-build.yml
@@ -12,7 +12,29 @@ on:
       - main
 
 jobs:
+  changes:
+    name: Detect changes
+    runs-on: ubuntu-latest
+    outputs:
+      solana_changes: ${{ steps.changes.outputs.solana_changes }}
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+      - name: Detect changes
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
+        id: changes
+        with:
+          list-files: "shell"
+          filters: |
+            solana_changes:
+              - 'chains/solana/**'
+              - '.github/workflows/solana*.yml'
+
   build:
+    needs: [ changes ]
+    if: ${{ needs.changes.outputs.solana_changes == 'true' }}
     runs-on: ubuntu-latest-8cores-32GB
     steps:
     - uses: actions/checkout@v4
