--- a/chains/solana/contracts/programs/cctp-token-messenger-minter-mock/Cargo.toml
+++ b/chains/solana/contracts/programs/cctp-token-messenger-minter-mock/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cctp-token-messenger-minter-mock"
+name = "cctp_token_messenger_minter_mock"
 version = "0.1.0"
 description = "Mock implementation of Token Messenger Minter for Cross-Chain Transfer Protocol"
 edition = "2021"
@@ -16,5 +16,6 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
+anchor-lang = { version = "0.29.0", features = ["event-cpi"] }
 anchor-spl = "0.29.0"
+cctp_message_transmitter_mock = { path = "../cctp-message-transmitter-mock", features = ["no-entrypoint", "cpi"] }
