--- a/chains/solana/contracts/programs/cctp-message-transmitter-mock/Cargo.toml
+++ b/chains/solana/contracts/programs/cctp-message-transmitter-mock/Cargo.toml
@@ -16,4 +16,5 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
+anchor-lang = { version = "0.29.0", features = ["init-if-needed", "event-cpi"] }
+solana-program = "1.17.25" # pin solana to 1.17
