separate release CI that runs including metadata

--- a/.github/workflows/solidity-build-and-publish.yml
+++ b/.github/workflows/solidity-build-and-publish.yml
@@ -92,15 +92,20 @@ jobs:
           working-directory: chains/evm
 
       - name: Run native compile and generate wrappers
+        if: ${{ !(needs.tag-check.outputs.is-release-ccip == 'true' || needs.tag-check.outputs.is-pre-release-ccip == 'true') }}
         working-directory: chains/evm
         run: make wrappers
+
+      - name: Run native compile and generate wrappers including metadata
+        if: ${{ needs.tag-check.outputs.is-release-ccip == 'true' || needs.tag-check.outputs.is-pre-release-ccip == 'true' }}
+        working-directory: chains/evm
+        run: make wrappers-release
 
       - name: Install and run forge --zksync, and generate wrappers
         working-directory: chains/evm
         run: make wrappers-zksync
 
       - name: Check if Go solidity wrappers are updated
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         working-directory: chains/evm
         run: |
           git add --all
