only gen metadata when required (#955)
* only gen metadata when required

* separate release CI that runs including metadata

* fix CI

* only run ZK on releases

* test rm diff so fancy

* undo test

--- a/.github/workflows/solidity-build-and-publish.yml
+++ b/.github/workflows/solidity-build-and-publish.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           list-files: 'csv'
           filters: |
-            src:
+            changes:
               - 'chains/evm/**/*'
               - '.github/workflows/solidity-build-and-publish.yml'
               - '.github/workflows/solidity-wrappers.yml'
@@ -64,17 +64,6 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Checkout diff-so-fancy
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-          repository: so-fancy/diff-so-fancy
-          ref: a673cb4d2707f64d92b86498a2f5f71c8e2643d5 # v1.4.3
-          path: diff-so-fancy
-
-      - name: Install diff-so-fancy
-        run: echo "$GITHUB_WORKSPACE/diff-so-fancy" >> $GITHUB_PATH
-
       - name: Setup NodeJS
         uses: smartcontractkit/.github/actions/setup-nodejs@c094a1482049b2b9c0a7cde3f715bd76a60afd97
         with:
@@ -92,19 +81,25 @@ jobs:
           working-directory: chains/evm
 
       - name: Run native compile and generate wrappers
+        if: ${{ !(needs.tag-check.outputs.is-release-ccip == 'true' || needs.tag-check.outputs.is-pre-release-ccip == 'true') }}
         working-directory: chains/evm
         run: make wrappers
 
+      - name: Run native compile and generate wrappers including metadata
+        if: ${{ needs.tag-check.outputs.is-release-ccip == 'true' || needs.tag-check.outputs.is-pre-release-ccip == 'true' }}
+        working-directory: chains/evm
+        run: make wrappers-release
+
       - name: Install and run forge --zksync, and generate wrappers
+        if: ${{ needs.tag-check.outputs.is-release-ccip == 'true' || needs.tag-check.outputs.is-pre-release-ccip == 'true' }}
         working-directory: chains/evm
         run: make wrappers-zksync
 
       - name: Check if Go solidity wrappers are updated
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         working-directory: chains/evm
         run: |
           git add --all
-          git diff --minimal --color --cached --exit-code | diff-so-fancy
+          git diff --minimal --color --cached --exit-code
 
   # The if statements for steps after checkout repo is a workaround for
   # passing required check for PRs that don't have filtered changes.
