multiple exec reports (#883)
* Sketch in new types to support multiple exec reports from the builder.

* Update types according to target interface.

* Builder regression tests passing with new types.

* Fix many more regression tests.

* Fix more regression tests.

* All regression tests passing.

* All regression tests passing.

* Fix lint errors

* Fix protobuf backward/forward compatiblity.

* Simplify type migration decode function.

* Multiple exec reports - Unordered execution (#959)

This PR adds functionality to return multiple exec reports instead of only one. It only works with OutOfOrder messages/chains. When an exec report reaches capacity we should generate multiple exec reports rather than discarding all of the remaining data.

Added multiple tests and code defensively against having a misconfiguration with multi report enabled for chains that are ordered or have ordered commits.

First real world scenario will be Solana with 1 message per 1 report.

https://github.com/smartcontractkit/chainlink/pull/17968/commits
core ref: 486ff774e32af69fd01543dc043e572dc16a1bc8

* make messaging tests specific

* Increase timeouts for solana messaging tests

---------

Co-authored-by: asoliman <abdelrahman.soliman@smartcontract.com>
Co-authored-by: Abdelrahman Soliman (Boda) <2677789+asoliman92@users.noreply.github.com>

--- a/.github/workflows/ccip-integration-test.yml
+++ b/.github/workflows/ccip-integration-test.yml
@@ -49,18 +49,24 @@ jobs:
             name: "USDC Test"
           - cmd: cd integration-tests/smoke/ccip && go test ccip_ooo_execution_test.go -timeout 12m -test.parallel=1 -count=1 -json
             name: "OOO Execution Test"
-          - cmd: cd integration-tests/smoke/ccip && go test -run "Test_CCIPMessaging_EVM2EVM" ccip_messaging_test.go -timeout 12m -test.parallel=2 -count=1 -json
-            name: "Messaging Test"
+          - cmd: cd integration-tests/smoke/ccip && go test -run "Test_CCIPMessaging_EVM2EVM" ccip_messaging_test.go -timeout 20m -test.parallel=1 -count=1 -json
+            name: "Messaging Test Test_CCIPMessaging_EVM2EVM"
+          - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_EVM2Solana$" ccip_messaging_test.go -timeout 30m -test.parallel=1 -count=1 -json
+            name: "Messaging Test Test_CCIPMessaging_EVM2Solana"
+          - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_Solana2EVM$" ccip_messaging_test.go -timeout 30m -test.parallel=1 -count=1 -json
+            name: "Messaging Test Test_CCIPMessaging_Solana2EVM"
+          - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_EVM2SolanaMultiExecReports$" ccip_messaging_test.go -timeout 35m -test.parallel=1 -count=1 -json
+            name: "Messaging Test Test_CCIPMessaging_EVM2SolanaMultiExecReports"
           - cmd: cd integration-tests/smoke/ccip && go test -run "Test_CCIPBatching_MaxBatchSizeEVM" ccip_batching_test.go -timeout 12m -test.parallel=1 -count=1 -json
             name: "Batching Test Test_CCIPBatching_MaxBatchSizeEVM"
           - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPBatching_MultiSource$" ccip_batching_test.go -timeout 12m -test.parallel=1 -count=1 -json
             name: "Batching Test Test_CCIPBatching_MultiSource"
-          - cmd: cd integration-tests/smoke/ccip && go test -run "Test_CCIPBatching_MultiSource_MultiReports" ccip_batching_test.go -timeout 12m -test.parallel=1 -count=1 -json
-            name: "Batching Test Test_CCIPBatching_MultiSource_MultiReports"
+          - cmd: cd integration-tests/smoke/ccip && go test -run "Test_CCIPBatching_MultiSource_MultiRoot" ccip_batching_test.go -timeout 12m -test.parallel=1 -count=1 -json
+            name: "Batching Test Test_CCIPBatching_MultiSource_MultiRoot"
           - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPBatching_SingleSource$" ccip_batching_test.go -timeout 12m -test.parallel=1 -count=1 -json
             name: "Batching Test Test_CCIPBatching_SingleSource"
-          - cmd: cd integration-tests/smoke/ccip && go test -run "Test_CCIPBatching_SingleSource_MultipleReports" ccip_batching_test.go -timeout 12m -test.parallel=1 -count=1 -json
-            name: "Batching Test Test_CCIPBatching_SingleSource_MultipleReports"
+          - cmd: cd integration-tests/smoke/ccip && go test -run "Test_CCIPBatching_SingleSource_MultiRoot" ccip_batching_test.go -timeout 12m -test.parallel=1 -count=1 -json
+            name: "Batching Test Test_CCIPBatching_SingleSource_MultiRoot"
           - cmd: cd integration-tests/smoke/ccip && go test ccip_gas_price_updates_test.go -timeout 12m -test.parallel=2 -count=1 -json
             name: "Gas Price Updates Test"
           # TODO: this can only run in docker for now, switch to in-memory and uncomment
