remove evm2solana test

--- a/.github/workflows/ccip-integration-test.yml
+++ b/.github/workflows/ccip-integration-test.yml
@@ -52,8 +52,9 @@ jobs:
           - cmd: cd integration-tests/smoke/ccip && go test -run "Test_CCIPMessaging_EVM2EVM" ccip_messaging_test.go -timeout 20m -test.parallel=1 -count=1 -json
             name: "Messaging Test Test_CCIPMessaging_EVM2EVM"
           - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_EVM2Solana$" ccip_messaging_test.go -timeout 30m -test.parallel=1 -count=1 -json
-            name: "Messaging Test Test_CCIPMessaging_EVM2Solana"
-          - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_Solana2EVM$" ccip_messaging_test.go -timeout 30m -test.parallel=1 -count=1 -json
+            #TODO Investigate why it's flakey and times out a lot
+#            name: "Messaging Test Test_CCIPMessaging_EVM2Solana"
+#          - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_Solana2EVM$" ccip_messaging_test.go -timeout 30m -test.parallel=1 -count=1 -json
             name: "Messaging Test Test_CCIPMessaging_Solana2EVM"
           - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_EVM2SolanaMultiExecReports$" ccip_messaging_test.go -timeout 35m -test.parallel=1 -count=1 -json
             name: "Messaging Test Test_CCIPMessaging_EVM2SolanaMultiExecReports"
