--- a/chains/solana/contracts/Cargo.toml
+++ b/chains/solana/contracts/Cargo.toml
@@ -13,6 +13,7 @@ overflow-checks = true
 lto = "fat"
 codegen-units = 1
 # -Znew-llvm-pass-manager
+# -Znext-lockfile-bump
 
 [profile.test]
 overflow-checks = true
