Add vendored CCTP contract binaries

--- a/chains/solana/.gitignore
+++ b/chains/solana/.gitignore
@@ -8,6 +8,8 @@
 contracts/target/*
 !contracts/target/idl/
 !contracts/target/types/
+!contracts/target/vendor/
+!contracts/target/vendor/*
 contracts/programs/*/target
 contracts/.anchor
 # keypair used by anchor/anchor test
