--- a/.github/workflows/ccip-integration-test.yml
+++ b/.github/workflows/ccip-integration-test.yml
@@ -55,7 +55,7 @@ jobs:
             name: "Messaging Test Test_CCIPMessaging_EVM2Solana"
           - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_Solana2EVM$" ccip_messaging_test.go -timeout 30m -test.parallel=2 -count=1 -json
             name: "Messaging Test Test_CCIPMessaging_Solana2EVM"
-          - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_EVM2SolanaMultiExecReports$" ccip_messaging_test.go -timeout 35m -test.parallel=1 -count=1 -json
+          - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_MultiExecReports_EVM2Solana" ccip_messaging_test.go -timeout 35m -test.parallel=1 -count=1 -json
             name: "Messaging Test Test_CCIPMessaging_EVM2SolanaMultiExecReports"
           - cmd: cd integration-tests/smoke/ccip && go test -run "Test_CCIPBatching_MaxBatchSizeEVM" ccip_batching_test.go -timeout 12m -test.parallel=1 -count=1 -json
             name: "Batching Test Test_CCIPBatching_MaxBatchSizeEVM"
