Exclude devnet tests from running in CI

--- a/chains/solana/Makefile
+++ b/chains/solana/Makefile
@@ -49,7 +49,7 @@ format:
 
 .PHONY: go-tests
 go-tests:
-	go test -v ./... -json -covermode=atomic -coverpkg=./... -coverprofile=integration_coverage.txt 2>&1 | tee /tmp/gotest.log | gotestloghelper -ci=true -singlepackage=true -hidepassingtests=false -hidepassinglogs=false
+	go test -v ./... -skip 'Devnet' -json -covermode=atomic -coverpkg=./... -coverprofile=integration_coverage.txt 2>&1 | tee /tmp/gotest.log | gotestloghelper -ci=true -singlepackage=true -hidepassingtests=false -hidepassinglogs=false
 
 .PHONY: ccip-router-contracts-go-tests
 ccip-router-contracts-go-tests:
