Move devnet tests to their own folder and exclude them from linting, as they are not meant for CI

--- a/chains/solana/Makefile
+++ b/chains/solana/Makefile
@@ -33,7 +33,7 @@ rust-tests:
 
 .PHONY: lint-go
 lint-go:
-	golangci-lint --max-issues-per-linter 0 --max-same-issues 0 --color=always --exclude=dot-imports --timeout 15m --out-format checkstyle:golangci-lint-report.xml run
+	golangci-lint --max-issues-per-linter 0 --max-same-issues 0 --color=always --exclude=dot-imports --timeout 15m --out-format checkstyle:golangci-lint-report.xml --exclude-dirs devnet run
 
 .PHONY: lint-go-fix
 lint-go-fix:
