Implement nested autoderive interface

--- a/chains/solana/Makefile
+++ b/chains/solana/Makefile
@@ -41,7 +41,7 @@ lint-go-fix:
 
 .PHONY: anchor-go-gen
 anchor-go-gen:
-	cd ./contracts && rm -rf ./target && anchor build && cd .. && ./scripts/anchor-go-gen.sh
+	cd ./contracts && find ./target -mindepth 1 ! -path './target/vendor*' -exec rm -rf {} + && anchor build && cd .. && ./scripts/anchor-go-gen.sh
 
 .PHONY: format
 format:
